[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/SongRunner/SongRunner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SongRunner/SongRunnerAudioPlayer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Notes/NoteLineGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Beep-09.ogg" type="AudioStream" id=4]

[node name="SongRunner" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongRunnerAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
script = ExtResource( 2 )

[node name="NoteLineGroupLeft" parent="." instance=ExtResource( 3 )]

[node name="NoteLineGroupRight" parent="." instance=ExtResource( 3 )]
margin_left = 0.706177
margin_right = 500.706
type = 1

[node name="GoodHitLabel" type="Label" parent="."]
visible = false
margin_left = 400.0
margin_top = 600.0
margin_right = 440.0
margin_bottom = 614.0
text = "Hit: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BadOrMissLabel" type="Label" parent="."]
visible = false
margin_left = 600.0
margin_top = 600.0
margin_right = 646.0
margin_bottom = 614.0
text = "Miss: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
